--- a/Css/Sass/list.sass
+++ b/Css/Sass/list.sass
@@ -1,6 +1,5 @@
 ul.cr.list 
 	position: relative
-	color: lighten($black, 30)
 	width: 400px 
 	margin: 2px 2px 2px 2px
 	box-sizing: border-box
@@ -40,7 +39,7 @@ ul.cr.list
 		list-style-type: none
 		border-top: 0
 		box-shadow: 0.5px 0.5px 0.5px  lighten($gray, 25), -0.5px 0.5px 0.5px  lighten($gray, 25)
-		transition: background 0.3s ease-out
+		transition: background 0.3s ease-out, color 0.3s ease-out
 		&:hover 
 			background: darken($white, 5)
 			> div.li.info 
@@ -122,7 +121,6 @@ ul.cr.list
 	@media screen and (min-width: 1200px)
 		width: 400px 
 
-
 			
 ul.cr.list.content
 	li 
@@ -160,6 +158,11 @@ ul.cr.list.adaptive
 	width: auto !important 
 	li 
 		width: 100% !important 
+
+ul.cr.list.tiny 
+	width: 300px !important
+	li 
+		padding: 10px 10px 10px 10px !important 
 
 
 ul.cr.list.blue 
@@ -347,7 +350,6 @@ ul.cr.list.teal
 	i 
 		color: $white !important 
 
- 
 ul.cr.list.gold 
 	li 
 		background: $gold 
@@ -364,9 +366,11 @@ ul.cr.list.gold
 		color: $white !important 
 
 
-div.ul-head 
+div.ul-head
+	background: $white
+
 	i.close 
-		color: lighten($black, 30)
+		// color: lighten($black, 30)
 		position: absolute 
 		top: 0 
 		right: 0
