--- a/Css/Sass/loaders.sass
+++ b/Css/Sass/loaders.sass
@@ -9,9 +9,36 @@ div.cr.loader.circular
 	
 	margin: 2px 0 2px 0
 	background: none 
+	-webkit-transition: transform 0.3s ease-out 
+	-ms-transition: transform 0.3s ease-out
 	transition: transform 0.3s ease-out 
+
+	-webkit-animation: transform 0.3s ease-out
+	-ms-transition: transform 0.3s ease-out
 	animation: spin 2s linear infinite
 
+div.cr.loader.screen.circular 
+	position: fixed 
+	top: 40% 
+	left: 48% 
+	border: 5px solid rgba($gray, .1)
+	// border-top: 5px solid lighten($white, 30)
+	z-index: 201
+
+	width: 50px 
+	height: 50px 
+	border-radius: 50% 
+
+	margin: 0 auto 
+	background: none 
+
+	-webkit-transition: transform 0.3s ease-out 
+	-ms-transition: transform 0.3s ease-out
+	transition: transform 0.3s ease-out 
+
+	-webkit-animation: transform 0.3s ease-out
+	-ms-transition: transform 0.3s ease-out
+	animation: spin 2s linear infinite
 
 div.cr.loader.circular.inline 
 	display: inline-block !important 
@@ -30,8 +57,12 @@ div.cr.loader.circular.x-large
 	height: 80px
 
 div.cr.loader.circular.fast 
+	-webkit-animation: spin 1s linear infinite 
+	-ms-animation: spin 1s linear infinite 
 	animation: spin 1s linear infinite 
 div.cr.loader.circular.s-fast 
+	-webkit-animation: spin 0.5s linear infinite 
+	-ms-animation: spin 0.5s linear infinite 
 	animation: spin 0.5s linear infinite 
 
 div.cr.loader.circular.dark-bg
@@ -39,66 +70,188 @@ div.cr.loader.circular.dark-bg
 	border-top: 5px solid $white !important
 
 div.cr.loader.circular.colored 
+	-webkit-transition: border-color 0.3s ease-out
+	-ms-transition: border-color 0.3s ease-out
 	transition: border-color 0.3s ease-out
+
+	-webkit-animation: spinColor 2s linear infinite 
+	-ms-animation: spinColor 2s linear infinite 
 	animation: spinColor 2s linear infinite 
 
-div.cr.loader.bouncy
-	width: 40px
-	height: 40px 
-	box-sizing: border-box 
-	border-radius: 50% 
-	background: rgba($red, .8)
-	-webkit-transition: background 0.3s ease-out, transform 0.3s ease-out, opacity 0.3s ease-out
-	transition: background 0.3s ease-out, transform 0.3s ease-out, opacity 0.3s ease-out
-	-webkit-animation: bouncy 2s  infinite  ease-in-out
-	animation: bouncy 2s  infinite  ease-in-out
 
-div.cr.loader.pulse 
+div.cr.loader.screen.pulse 
+	position: fixed 
+	left: 47% 
+	top: 40% 
+	z-index: 201
+	margin: 0 auto 
+
+	-webkit-transition: opacity 0.3s ease-out 
+	-ms-transition: opacity 0.3s ease-out
+	transition: opacity 0.3s ease-out
+
 	width: 40px 
 	height: 40px 
 	background: lighten($black, 30)
 	border-radius: 50% 
 	-webkit-animation: pulse 1s infinite ease-in-out 
+	-ms-animation: pulse 1s infinite ease-in-out
 	animation: pulse 1s infinite ease-in-out 
 
-div.cr.loader.dots
+div.cr.loader.screen.bouncy
+	width: 40px
+	height: 40px 
+	box-sizing: border-box 
+	border-radius: 50% 
+	background: rgba($red, .8)
+
+	-webkit-transition: background 0.3s ease-out, transform 0.3s ease-out, opacity 0.3s ease-out
+	-ms-transition: background 0.3s ease-out, transform 0.3s ease-out, opacity 0.3s ease-out
+	transition: background 0.3s ease-out, transform 0.3s ease-out, opacity 0.3s ease-out
+
+	-webkit-animation: bouncy 2s  infinite  ease-in-out
+	-ms-transition: bouncy 2s  infinite  ease-in-out
+	animation: bouncy 2s  infinite  ease-in-out
+
+div.cr.loader.screen.bouncy.fast 
+	-webkit-animation: bouncy 1s  infinite  ease-in-out
+	-ms-transition: bouncy 1s  infinite  ease-in-out
+	animation: bouncy 1s  infinite  ease-in-out
+div.cr.loader.screen.bouncy.s-fast 
+	-webkit-animation: bouncy 0.5s  infinite  ease-in-out
+	-ms-transition: bouncy 0.5s  infinite  ease-in-out
+	animation: bouncy 0.5s  infinite  ease-in-out
+
+
+
+div.cr.loader.screen.dots
 	width: 80px 
 	text-align: center 
+	margin: 0 auto 
+	position: fixed
+	-webkit-transition: opacity 0.3s ease-out 
+	-ms-transition: opacity 0.3s ease-out 
+	transition: opacity 0.3s ease-out 
+	z-index: 201
+	left: 46% 
+	top: 40%
+	animation: fadeIn 0.3s ease-out 
 	div.dot
 		width: 20px 
 		height: 20px
 		border-radius: 50% 
 		display: inline-block
-		background: lighten($black, 30)
 		-webkit-animation: dots 1.4s ease-in-out 0s infinite both 
+		-ms-animation: dots 1.4s ease-in-out 0s infinite both 
 		animation: dots 1.4s ease-in-out 0s infinite both 
 	div.d1 
 		-webkit-animation-delay: -0.32s 
+		-ms-animation-delay: -0.32s
 		animation-delay: -0.32s
 	div.d2 
 		-webkit-animation-delay: -0.16s 
+		-ms-animation-delay: -0.16s
 		animation-delay: -0.16s
+span.load-overlay 
+	position: fixed 
+	z-index: 200 
+	top: 0 
+	left: 0 
+	width: 100% 
+	height: 100vh 
+	-webkit-transition: opacity 0.3s ease-out 
+	-ms-transition: opacity 0.3s ease-out
+	transition: opacity 0.3s ease-out 
+	opacity: 1 
+	-webkit-animation: fadeIn 0.4s ease-in-out 
+	-ms-animation: fadeIn 0.4s ease-in-out 
+	animation: fadeIn 0.4s ease-in-out 
+
+span.load-overlay.hide 
+	opacity: 0 
 
 
 
+div.cr.loader.screen.balls 
+	position: fixed 
+	z-index: 201 
+	left: 47% 
+	-webkit-transition: opacity 0.3s ease-out 
+	-ms-transition: opacity 0.3s ease-out
+	transition: opacity 0.3s ease-out
+	top: 40% 
+	height: 50px 
+	width: 50px 
+	margin: 0 auto 
+	-webkit-animation: spinRotate 1s  infinite 
+	-moz-animation: spinRotate 1s  infinite 
+	-ms-animation: spinRotate 1s  infinite 
+	animation: spinRotate 1s  infinite 	
 
+	&:before, &:after 
+		content: ''
+		border-radius: 50% 
+		-webkit-transition: transform 0.3s ease-out
+		-ms-transition: transform 0.3s ease-out
+		transition: transform 0.3s ease-out
+		display: block 
+		height: 20px 
+		width: 20px 
 
+	&:before 
+		animation: ball1 1s infinite 
+		background: #cb2025
+		box-shadow: 30px 0 0 #f8b334 
+		margin-bottom: 10px 
 
+	&:after 
+		animation: ball2 1s infinite 
+		background: #2196F3
+		box-shadow: 30px 0 0 #4CAF50
 
+div.cr.loader.screen.bars
+	color: $white 
+	margin: 0 auto 
+	position: fixed 
+	z-index: 201 
+	left: 46% 
+	top: 40% 
+	-webkit-transition: opacity 0.3s ease-out 
+	-ms-transition: opacity 0.3s ease-out
+	transition: opacity 0.3s ease-out
 
+	-webkit-transform: translateZ(0)
+	-ms-transform: translateZ(0)
+	transform: translateZ(0)
 
+	-webkit-animation-delay: -0.16s
+	-ms-animation-delay: -0.16s
+	animation-delay: -0.16s
+	font-size: 12px
 
+	-webkit-animation: bar1 1s infinite ease-out 
+	-ms-animation: bar1 1s infinite ease-out 
+	animation: bar1 1s infinite ease-out 
 
+	&:before, &:after 
+		background-color: #fff 
+		-webkit-animation: bar1 1s infinite ease-out 
+		-ms-animation: bar1 1s infinite ease-out 
+		animation: bar1 1s infinite ease-out 
+		width: 16px 
+		height: 84px 
+		position: absolute 
+		top: 0 
+		content: ''
+	&:before 
+		left: -24px
+		-webkit-animation-delay: -0.32s 
+		-ms-animation-delay: -0.32s 
+		animation-delay: -0.32s 
+	&:after 
+		left: 24px 
 
-
-
-
-
-
-
-
-
-
+		
 
 
 
