--- a/Css/Sass/transitions.sass
+++ b/Css/Sass/transitions.sass
@@ -52,32 +52,24 @@
 @-ms-keyframes fadeIn 
     0%
         opacity: 0 
-    50% 
-        opacity: 0.5 
     100%
         opacity: 1 !important  
 
 @-webkit-keyframes fadeIn 
     0%
         opacity: 0 
-    50% 
-        opacity: 0.5 
     100%
         opacity: 1 !important 
 
 @-moz-keyframes fadeIn 
     0%
         opacity: 0 
-    50% 
-        opacity: 0.5 
     100%
         opacity: 1 !important 
 
 @keyframes fadeIn 
     0%
         opacity: 0 
-    50% 
-        opacity: 0.5 
     100%
         opacity: 1 !important 
 
@@ -256,9 +248,9 @@
         -webkit-transform: scale(0)
         transform: scale(0)
     100% 
-        -webkit-transform: scale(1)
+        -webkit-transform: scale(1.5)
         opacity: 0
-        transform: scale(1)
+        transform: scale(1.5)
 
 
 @-ms-keyframes pulse 
@@ -266,18 +258,18 @@
         -webkit-transform: scale(0)
         transform: scale(0)
     100% 
-        -webkit-transform: scale(1)
+        -webkit-transform: scale(1.5)
         opacity: 0
-        transform: scale(1)
+        transform: scale(1.5)
 
 @keyframes pulse 
     0% 
         -webkit-transform: scale(0)
         transform: scale(0)
     100% 
-        -webkit-transform: scale(1)
+        -webkit-transform: scale(1.5)
         opacity: 0
-        transform: scale(1)
+        transform: scale(1.5)
 
 
 @-webkit-keyframes dots 
@@ -299,5 +291,139 @@
         transform: scale(1)
 
 
+
+@-webkit-keyframes spinRotate
+    0% 
+        -webkit-transform: rotate(0deg) scale(0.8)
+        -moz-transform: rotate(0deg) scale(0.8)
+        transform: rotate(0deg) scale(0.8)
+    50% 
+        -webkit-transform: rotate(360deg) scale(1.2)
+        -moz-transform: rotate(360deg) scale(1.2)
+        transform: rotate(360deg) scale(1.2)
+    100% 
+        -webkit-transform: rotate(720deg) scale(0.8)
+        -moz-transform: rotate(720deg) scale(0.8)
+        transform: rotate(720deg) scale(0.8)
+
+@-moz-keyframes spinRotate
+    0% 
+        -webkit-transform: rotate(0deg) scale(0.8)
+        -moz-transform: rotate(0deg) scale(0.8)
+        transform: rotate(0deg) scale(0.8)
+    50% 
+        -webkit-transform: rotate(360deg) scale(1.2)
+        -moz-transform: rotate(360deg) scale(1.2)
+        transform: rotate(360deg) scale(1.2)
+    100% 
+        -webkit-transform: rotate(720deg) scale(0.8)
+        -moz-transform: rotate(720deg) scale(0.8)
+        transform: rotate(720deg) scale(0.8)
+
+@-ms-keyframes spinRotate
+    0% 
+        -webkit-transform: rotate(0deg) scale(0.8)
+        -moz-transform: rotate(0deg) scale(0.8)
+        transform: rotate(0deg) scale(0.8)
+    50% 
+        -webkit-transform: rotate(360deg) scale(1.2)
+        -moz-transform: rotate(360deg) scale(1.2)
+        transform: rotate(360deg) scale(1.2)
+    100% 
+        -webkit-transform: rotate(720deg) scale(0.8)
+        -moz-transform: rotate(720deg) scale(0.8)
+        transform: rotate(720deg) scale(0.8)
+
+@keyframes spinRotate 
+    0% 
+        -webkit-transform: rotate(0deg) scale(0.8)
+        -moz-transform: rotate(0deg) scale(0.8)
+        transform: rotate(0deg) scale(0.8)
+    50% 
+        -webkit-transform: rotate(360deg) scale(1.2)
+        -moz-transform: rotate(360deg) scale(1.2)
+        transform: rotate(360deg) scale(1.2)
+    100% 
+        -webkit-transform: rotate(720deg) scale(0.8)
+        -moz-transform: rotate(720deg) scale(0.8)
+        transform: rotate(720deg) scale(0.8)
+
+
+
+@-webkit-keyframes ball1 
+    0% 
+        box-shadow: 30px 0 0 #f8b334 
+    50% 
+        box-shadow: 0 0 0 #f8b334 
+        margin-bottom: 0 
+        transform: translate(15px,15px)
+    100% 
+        box-shadow: 30px 0 0 #f8b334
+        margin-bottom: 10px 
+
+@-ms-keyframes ball1 
+    0% 
+        box-shadow: 30px 0 0 #f8b334 
+    50% 
+        box-shadow: 0 0 0 #f8b334 
+        margin-bottom: 0 
+        transform: translate(15px,15px)
+    100% 
+        box-shadow: 30px 0 0 #f8b334
+        margin-bottom: 10px 
+
+@keyframes ball1 
+    0% 
+        box-shadow: 30px 0 0 #f8b334 
+    50% 
+        box-shadow: 0 0 0 #f8b334 
+        margin-bottom: 0 
+        transform: translate(15px,15px)
+    100% 
+        box-shadow: 30px 0 0 #f8b334
+        margin-bottom: 10px 
+
+
+@-webkit-keyframes ball2 
+    0% 
+        box-shadow: 30px 0 0 #4CAF50
+    50% 
+        box-shadow: 0 0 0 #4CAF50 
+        margin-top: -20px 
+        transform: translate(15px, 15px)
+    100% 
+        box-shadow: 30px 0 0 #4CAF50 
+        margin-top: 0
+
+@-ms-keyframes ball2 
+    0% 
+        box-shadow: 30px 0 0 #4CAF50
+    50% 
+        box-shadow: 0 0 0 #4CAF50 
+        margin-top: -20px 
+        transform: translate(15px, 15px)
+    100% 
+        box-shadow: 30px 0 0 #4CAF50 
+        margin-top: 0
+
+@keyframes ball2 
+    0% 
+        box-shadow: 30px 0 0 #4CAF50
+    50% 
+        box-shadow: 0 0 0 #4CAF50 
+        margin-top: -20px 
+        transform: translate(15px, 15px)
+    100% 
+        box-shadow: 30px 0 0 #4CAF50 
+        margin-top: 0 
+    
+
+@keyframes bar1 
+    0%, 80%, 100% 
+        box-shadow: 0 0 
+        height: 64px 
+    40% 
+        box-shadow: 0 -2px 
+        height: 80px 
 
 
