Loaders tienen ya personalizacion de color, solo falta ajustar la funcion que lo colorea y ver si es posible hacer que un loader logre sincronizar un intervalo con el tiempo de carga

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -420,6 +420,11 @@ div.cr.button
 	.ripple 
 		background: $purple 
 
+.cr.simple.button.pink 
+	color: $pink 
+	.ripple 
+		background-color: $pink
+
 .cr.simple.button.yellow
 	color: $yellow 
 	.ripple 
